# embassy

docs/modules/ROOT/pages/: bootloader.adoc
embassy-boot/boot/src/: lib.rs
embassy-boot/stm32/: Cargo.toml  build.rs  memory.x
embassy-boot/stm32/src/: lib.rs  main.rs
embassy-nrf/src/: usb.rs
embassy-stm32/: Cargo.toml
embassy-stm32/src/: exti.rs  lib.rs
embassy-stm32/src/flash/: mod.rs
embassy-stm32/src/rcc/: f1.rs  mod.rs  wl.rs
embassy-usb-ncm/: Cargo.toml
embassy-usb-ncm/src/: lib.rs
embassy-usb/src/: builder.rs  driver.rs  lib.rs
examples/boot/nrf/: Cargo.toml
examples/boot/stm32l4/: Cargo.toml
examples/boot/stm32wl/: Cargo.toml  memory.x
examples/nrf/: Cargo.toml
examples/stm32wl/: Cargo.toml
